Reformatted :paper submodule